--- a/Project 0/game.ipynb
+++ b/Project 0/game.ipynb
@@ -4,13 +4,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GAME\n"
+    "# Игра угадай число\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate jupyter: Running cells with 'Python 3.8.8 64-bit' requires notebook package.\n",
+      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "Command: 'C:/Users/maley/AppData/Local/Programs/Python/Python38/python.exe -m pip install jupyter notebook -U'"
+     ]
+    }
+   ],
+   "source": [
+    "from game_v2 import score_game\n",
+    "from game_v2 import random_predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Угадываем рандомно"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate jupyter: Running cells with 'Python 3.8.8 64-bit' requires jupyter and notebook package.\n",
+      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "Command: 'C:/Users/maley/AppData/Local/Programs/Python/Python38/python.exe -m pip install jupyter notebook -U'"
+     ]
+    }
+   ],
+   "source": [
+    " score_game(random_predict) #вызов функции"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "464f21b4fdc9e237c546e97015711a688404d3d9b97ea8bc56627c532369a798"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
