--- a/Project 0/game.ipynb
+++ b/Project 0/game.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mJupyter cannot be started. Error attempting to locate jupyter: Running cells with 'Python 3.8.8 64-bit' requires notebook package.\n",
-      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
-      "Command: 'C:/Users/maley/AppData/Local/Programs/Python/Python38/python.exe -m pip install jupyter notebook -U'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from game_v2 import score_game\n",
     "from game_v2 import random_predict"
@@ -37,17 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
+     "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mJupyter cannot be started. Error attempting to locate jupyter: Running cells with 'Python 3.8.8 64-bit' requires jupyter and notebook package.\n",
-      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
-      "Command: 'C:/Users/maley/AppData/Local/Programs/Python/Python38/python.exe -m pip install jupyter notebook -U'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32md:\\IDE\\Project 0\\game.ipynb Cell 4'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/IDE/Project%200/game.ipynb#ch0000005?line=0'>1</a>\u001b[0m score_game(random_predict)\n",
+      "File \u001b[1;32md:\\IDE\\Project 0\\game_v2.py:43\u001b[0m, in \u001b[0;36mscore_game\u001b[1;34m(random_predict)\u001b[0m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=39'>40</a>\u001b[0m random_array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m101\u001b[39m, size\u001b[39m=\u001b[39m(\u001b[39m1000\u001b[39m)) \u001b[39m# загадали список чисел\u001b[39;00m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=41'>42</a>\u001b[0m \u001b[39mfor\u001b[39;00m number \u001b[39min\u001b[39;00m random_array:\n\u001b[1;32m---> <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=42'>43</a>\u001b[0m     count_ls\u001b[39m.\u001b[39mappend(random_predict(number))\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=44'>45</a>\u001b[0m score \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39mmean(count_ls)) \u001b[39m# находим среднее количество попыток\u001b[39;00m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=46'>47</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mВаш алгоритм угадывает число в среднем за: \u001b[39m\u001b[39m{\u001b[39;00mscore\u001b[39m}\u001b[39;00m\u001b[39m попыток\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32md:\\IDE\\Project 0\\game_v2.py:18\u001b[0m, in \u001b[0;36mrandom_predict\u001b[1;34m(number)\u001b[0m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=15'>16</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=16'>17</a>\u001b[0m     count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=17'>18</a>\u001b[0m     predict_number \u001b[39m=\u001b[39m (low \u001b[39m+\u001b[39;49m high)\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=18'>19</a>\u001b[0m     \u001b[39mif\u001b[39;00m predict_number \u001b[39m==\u001b[39m number:\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=19'>20</a>\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -66,7 +58,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
   "orig_nbformat": 4
