--- a/Project 0/game.ipynb
+++ b/Project 0/game.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[1;32md:\\IDE\\Project 0\\game.ipynb Cell 4'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/IDE/Project%200/game.ipynb#ch0000005?line=0'>1</a>\u001b[0m score_game(random_predict)\n",
       "File \u001b[1;32md:\\IDE\\Project 0\\game_v2.py:43\u001b[0m, in \u001b[0;36mscore_game\u001b[1;34m(random_predict)\u001b[0m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=39'>40</a>\u001b[0m random_array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandint(\u001b[39m1\u001b[39m, \u001b[39m101\u001b[39m, size\u001b[39m=\u001b[39m(\u001b[39m1000\u001b[39m)) \u001b[39m# загадали список чисел\u001b[39;00m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=41'>42</a>\u001b[0m \u001b[39mfor\u001b[39;00m number \u001b[39min\u001b[39;00m random_array:\n\u001b[1;32m---> <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=42'>43</a>\u001b[0m     count_ls\u001b[39m.\u001b[39mappend(random_predict(number))\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=44'>45</a>\u001b[0m score \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39mmean(count_ls)) \u001b[39m# находим среднее количество попыток\u001b[39;00m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=46'>47</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mВаш алгоритм угадывает число в среднем за: \u001b[39m\u001b[39m{\u001b[39;00mscore\u001b[39m}\u001b[39;00m\u001b[39m попыток\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32md:\\IDE\\Project 0\\game_v2.py:18\u001b[0m, in \u001b[0;36mrandom_predict\u001b[1;34m(number)\u001b[0m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=15'>16</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=16'>17</a>\u001b[0m     count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=17'>18</a>\u001b[0m     predict_number \u001b[39m=\u001b[39m (low \u001b[39m+\u001b[39;49m high)\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=18'>19</a>\u001b[0m     \u001b[39mif\u001b[39;00m predict_number \u001b[39m==\u001b[39m number:\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=19'>20</a>\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
+      "File \u001b[1;32md:\\IDE\\Project 0\\game_v2.py:24\u001b[0m, in \u001b[0;36mrandom_predict\u001b[1;34m(number)\u001b[0m\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=21'>22</a>\u001b[0m         high \u001b[39m=\u001b[39m predict_number\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=22'>23</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=23'>24</a>\u001b[0m         low \u001b[39m=\u001b[39m predict_number\n\u001b[0;32m     <a href='file:///d%3A/IDE/Project%200/game_v2.py?line=24'>25</a>\u001b[0m \u001b[39mreturn\u001b[39;00m(count)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
